Updated website with tweet deck and certification information

--- a/templates/education.html
+++ b/templates/education.html
@@ -117,9 +117,12 @@
 
     <div class="w3-container well w3-animate-right">
         <center>
-            <h2>Certiffications</h2>
+            <h2>Certifications</h2>
             <ul class="w3-ul w3-padding w3-border">
-                <!--<li>AWS Certified Developer Associate - Certified by Amazon</li>-->
+                <li><strong>AWS Certified Developer Associate - Certified by Amazon</strong>
+                    <a href="https://www.certmetrics.com/amazon/public/badge.aspx?i=2&t=c&d=2017-12-02&ci=AWS00355649&dm=80"
+                       target="_blank" class="w3-text-blue">Certification Link</a>
+                </li>
                 <!--<li>Java Certified Developer - Certified by Oracle</li>-->
                 <li>Embedded System Programmer</li>
                 <li>Business English Certificate (BEC) - Vantage</li>
