--- a/templates/projects.html
+++ b/templates/projects.html
@@ -8,9 +8,13 @@
         <h3>Check out my projects!</h3>
         <ul class="w3-class">
             <!--Current Project-->
-            <li><strong>Current Project: Using Splinter for web application testing</strong></li>
+            <li><strong>Current Project: Django web application</strong></li>
+            <li><strong>Recent Project:</strong>
+                <a href="https://www.amazon.com/dp/B077WXBN18/?ref-suffix=ss_copy" target="_blank" class="w3-text-blue">
+                    Certified Alexa Skill - getPercentage
+                </a> </li>
             <!--Currency converter app-->
-            <li><strong>Recent Project</strong><a class="w3-text-blue" target="_blank" href="http://srikkanthgovindaraajan.pythonanywhere.com/">
+            <li><a class="w3-text-blue" target="_blank" href="http://srikkanthgovindaraajan.pythonanywhere.com/">
                 Currency Converter web app with real time currency conversion
             </a> </li>
 <!--            Personal Website-->
