--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,12 @@
 <!-- Bootstrap files for bootstrap tour-->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.11.0/css/bootstrap-tour.min.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.11.0/js/bootstrap-tour.min.js"></script>
-
+<link href="https://fonts.googleapis.com/css?family=Spectral+SC" rel="stylesheet">
+<style>
+    .w3-spectral {
+            font-family: 'Spectral SC', serif;
+        }
+</style>
 <script>
     $(function () {
         var tour = new Tour() ;
@@ -35,7 +40,7 @@
             }]);
 
         // Initialize the tour
-        tour.init().restart();
+        tour.init().start();
     });
 </script>
 
@@ -51,12 +56,13 @@
             </p>
             <div class="w3-container w3-animate-bottom">
                 <button id="button1" class="w3-button w3-blue w3-hover-text-black" onclick="$('#iframe-video').slideToggle();">
-                    <b>Click here to see an introduction video. Please allow access to Adobe Flash player.</b>
+                    <b>Click here to see an introduction video.</b>
                 </button>
             </div>
             <br><br>
             <div class="w3-container well" style="display:none;" id="iframe-video">
-                <iframe width="1280" height="761" src="http://www.powtoon.com/embed/esyY07qdH3Q/" frameborder="0"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/PiiT18x8bFU" frameborder="0"
+                        gesture="media" allow="encrypted-media" allowfullscreen></iframe>
             </div>
 
             <div class="w3-container well">
@@ -65,16 +71,27 @@
                     <div class="w3-display-container" style="display:block;">
                         <img src="/static/images/project.gif" height="300" width="400">
                         <div class="w3-display-topmiddle w3-hide-small">
-                            <strong>Current Project: Using Splinter for web application Testing</strong>
+                            <strong>Current Project: Using Selenium / Splinter for web application Testing</strong>
                         </div>
                         <div class="w3-display-bottommiddle w3-hide-small">
-                            <strong>Currently Learning: AWS</strong>
+                            <strong>Currently Learning: Django web framework</strong>
                         </div>
                     </div>
                 </center>
                 <br>
             </div>
             <br><br>
+
+        <h2 class="w3-spectral"><strong>Recent Updates</strong></h2>
+        <div class="w3-container well w3-animate-down">
+            <div style="width:50%;">
+                <a class="twitter-timeline" data-theme="dark"
+                    href="https://twitter.com/srikk_baba/timelines/938644118120607744?ref_src=twsrc%5Etfw">
+                    ProfessionalTweets - Curated tweets by srikk_baba
+                </a>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+        </div>
 
         <div class="w3-container well w3-animate-top">
         I'm very social, catch up with me!<br><br>
