Added new blog post for AWS preparation and updated landing page with Powtoon youtube video and recent tweets from tweetdeck.

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,6 +82,7 @@
             </div>
             <br><br>
 
+        <!--Recent tweets from twitter -->
         <h2 class="w3-spectral"><strong>Recent Updates</strong></h2>
         <div class="w3-container well w3-animate-down">
             <div style="width:50%;">
