--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
         <br><br>
             <p class="well w3-animate-right">
                 Hi! Thank you for visiting my website. My name is Srikkanth Govindaraajan.<br>
-                Living in the Boston area, I work as a full time Senior Software Engineer with GlobalLogic, Inc.<br>
+                Living in the Chicago area, I work as a full time Senior Software Engineer with GlobalLogic, Inc.<br>
                 Check out my website, my interests.<br>
             </p>
             <div class="w3-container w3-animate-bottom">
@@ -71,10 +71,10 @@
                     <div class="w3-display-container" style="display:block;">
                         <img src="/static/images/project.gif" height="300" width="400">
                         <div class="w3-display-topmiddle w3-hide-small">
-                            <strong>Current Project: Using Selenium / Splinter for web application Testing</strong>
+                            <strong>Current Project: Using Selenium for web application Testing</strong>
                         </div>
                         <div class="w3-display-bottommiddle w3-hide-small">
-                            <strong>Currently Learning: Django web framework</strong>
+                            <strong>Currently Learning: BDD framework</strong>
                         </div>
                     </div>
                 </center>
