--- a/templates/skills.html
+++ b/templates/skills.html
@@ -28,7 +28,7 @@
         <li>Amazon Web Services (AWS)</li>
         <li>Perl Scripting</li>
         <li>Java Programming</li>
-        <li>C Programming</li>
+        <li>Behavior Driven Development (BDD)</li>
         <li>Shell Scripting</li>
         <li>Unified Modelling Language (UML)</li>
         <li>Python Unit Testing (pytest)</li>
@@ -54,6 +54,10 @@
         <li>Test Automation</li>
         <li>Tools: ALM, Jenkins, Jira</li>
         <li>Perforce</li>
+        <li>Cucumber framework</li>
+        <li>Cassandra & CQL</li>
+        <li>Kafka & Microservices</li>
+        <li>Selenium Testing</li>
       </ul>
     </div>
 <center>
